objects/Step_Execution__c.object
<CustomObject>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Execution</label>
        <referenceTo>Configuration_Execution__c</referenceTo>
        <relationshipLabel>Step Executions</relationshipLabel>
        <relationshipName>Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Step__c</fullName>
        <label>Configuration Step</label>
        <referenceTo>Configuration_Step__c</referenceTo>
        <relationshipLabel>Step Executions</relationshipLabel>
        <relationshipName>Step_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JobID__c</fullName>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Step Executions</relationshipLabel>
        <relationshipName>Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgCredentialId__c</fullName>
        <label>OrgCredentialId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Job Execution</label>
        <referenceTo>copado1p__Platform_Job_Execution__c</referenceTo>
        <relationshipLabel>Step Executions</relationshipLabel>
        <relationshipName>Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playground__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playground</label>
        <referenceTo>Playground__c</referenceTo>
        <relationshipLabel>Step Executions</relationshipLabel>
        <relationshipName>Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Instance_URL__c</fullName>
        <label>Target Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Org_Credential_Id__c</fullName>
        <label>Trial Org Credential Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Step Execution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Playground__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Step Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Step Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>